kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scope
  namespace: scope
  labels:
    run: scope
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: scope
