kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scope
  namespace: scope
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: scope.kops.promignis.com
      http:
        paths:
        - path: /
          backend:
            serviceName: scope
            servicePort: 80
